--- a/translations/kangyur/translations/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
+++ b/translations/kangyur/translations/062-015_toh215-the_sutra_on_advice_for_the_king_2.xml
@@ -32,7 +32,7 @@
         <editor role="finalReviewer" xml:id="UT22084-062-015-219">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -165,26 +165,30 @@
         <change who="#line-tofte" when="2024-05-02T09:07:02.026Z" type="text-version" status="0.0.4" xml:id="UT22084-062-015-220">
           <desc>Auto (update-contributors)</desc>
         </change>
-                <change who="#martina-cotter" when="2024-05-08T14:17:30.833Z" type="translation-status" status="1.a" xml:id="UT22084-062-015-227">
-                    <desc>1.a</desc>
-                </change>
-                <change who="#martina-cotter" when="2024-05-08T14:17:30.833Z" type="text-version" status="1.0.0" xml:id="UT22084-062-015-228">
-                    <desc>First published version.</desc>
-                </change>
-                <change who="#konchog" when="2024-05-08T17:38:42.087Z" type="text-version" status="1.0.1" xml:id="UT22084-062-015-229">
-                    <desc>More than 20 fixes throughout intro, translation, notes, and glossary.</desc>
-                </change>
-                <change who="#john" when="2024-05-08T19:07:37.299Z" type="text-version" status="1.0.2" xml:id="UT22084-062-015-230">
-                    <desc>Attempted fix of glossary definition for "self" at Konchog's request.</desc>
-                </change>
-                <change who="#konchog" when="2024-05-08T19:54:28.66Z" type="text-version" status="1.0.3" xml:id="UT22084-062-015-231">
-                    <desc>One final fix in the intro.</desc>
-                </change>
-                <change who="#andre" when="2024-05-10T17:33:17.325Z" type="text-version" status="1.0.4" xml:id="UT22084-062-015-232">
-                    <desc>Glossary matching revised - activated in CG</desc>
-                </change>
-                <change who="#john" when="2024-05-13T10:14:22.467Z" type="text-version" status="1.0.5" xml:id="UT22084-062-015-1142">
-                    <desc>Placed 2nd title as subtitle, other small edits, started adding biblio entries for 84000 texts mentioned in notes but others still needed.</desc>
+        <change who="#martina-cotter" when="2024-05-08T14:17:30.833Z" type="translation-status" status="1.a" xml:id="UT22084-062-015-227">
+          <desc>1.a</desc>
+        </change>
+        <change who="#martina-cotter" when="2024-05-08T14:17:30.833Z" type="text-version" status="1.0.0" xml:id="UT22084-062-015-228">
+          <desc>First published version.</desc>
+        </change>
+        <change who="#konchog" when="2024-05-08T17:38:42.087Z" type="text-version" status="1.0.1" xml:id="UT22084-062-015-229">
+          <desc>More than 20 fixes throughout intro, translation, notes, and glossary.</desc>
+        </change>
+        <change who="#john" when="2024-05-08T19:07:37.299Z" type="text-version" status="1.0.2" xml:id="UT22084-062-015-230">
+          <desc>Attempted fix of glossary definition for "self" at Konchog's request.</desc>
+        </change>
+        <change who="#konchog" when="2024-05-08T19:54:28.66Z" type="text-version" status="1.0.3" xml:id="UT22084-062-015-231">
+          <desc>One final fix in the intro.</desc>
+        </change>
+        <change who="#andre" when="2024-05-10T17:33:17.325Z" type="text-version" status="1.0.4" xml:id="UT22084-062-015-232">
+          <desc>Glossary matching revised - activated in CG</desc>
+        </change>
+        <change who="#john" when="2024-05-13T10:14:22.467Z" type="text-version" status="1.0.5" xml:id="UT22084-062-015-1142">
+          <desc>Placed 2nd title as subtitle, other small edits, started adding biblio entries for
+            84000 texts mentioned in notes but others still needed.</desc>
+        </change>
+                <change who="#martina-cotter" when="2024-05-15T02:12:34.245Z" type="text-version" status="1.0.6" xml:id="UT22084-062-015-1149">
+                    <desc>updated notes and bib entries.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -226,28 +230,28 @@
           <milestone unit="chunk" xml:id="UT22084-062-015-74"/>
           <p tid="10">
                         <title xml:lang="en">Advice to a King (2)</title>, which carries the
-            alternative colophon title <title xml:lang="en">Advice to Udayana, King of Vatsa</title>,
-            is a concise and poetic discourse on the futility of anger and warfare, and on the
-            liberating power of realizing the truth of emptiness—that all persons and all things
-            lack any enduring self.</p>
+            alternative colophon title <title xml:lang="en">Advice to Udayana, King of
+            Vatsa</title>, is a concise and poetic discourse on the futility of anger and warfare,
+            and on the liberating power of realizing the truth of emptiness—that all persons and all
+            things lack any enduring self.</p>
           <milestone unit="chunk" xml:id="UT22084-062-015-76"/>
           <p tid="11">This is one of three sūtras (Toh 214, 215, and 221) included in Kangyurs of
             the Tshalpa line under the identical title <title xml:lang="en">The Mahāyāna Sūtra
               “Advice to a King.”</title> The present sūtra (Toh 215) consists of advice given to
             Udayana, the king of Vatsa. The sūtra that immediately precedes it in the Degé Kangyur
-            (Toh 214),<note place="end" xml:id="UT22084-062-015-221">Sakya Pandita Translation
-              Group, trans. <title xml:lang="en">
+            (Toh 214),<note place="end" xml:id="UT22084-062-015-1143">
+                            <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh214.html">Advice to a King
                 (1)</ref>
-                            </title>, Toh 214 (84000: Translating the Words of the Buddha,
-              2024).</note> consists of advice to Bimbisāra, the king of Magadha. Finally, a longer
-            sūtra in the next volume of the Degé Kangyur (Toh 221)<ref rend="pending" target="http://read.84000.co/translation/toh221.html"/> presents advice to King
+                            </title> (<title xml:lang="Sa-Ltn">Rājadeśa­nāma­mahāyāna­sūtra</title>,
+              Toh 214).</note> consists of advice to Bimbisāra, the king of Magadha. Finally, a
+            longer sūtra in the next volume of the Degé Kangyur (Toh 221)<ref rend="pending" target="http://read.84000.co/translation/toh221.html"/> presents advice to King
             Prasenajit, the king of Kośala. </p>
           <milestone unit="chunk" xml:id="UT22084-062-015-77"/>
           <p tid="12">Only the third of these three (Toh 221) is attested in either Sanskrit or
-            Chinese, while both <title xml:lang="en">Advice to King Bimbisāra</title> (Toh 214)
-            and the present text <title xml:lang="en">Advice to King Udayana of Vatsa</title> (Toh
-            215) have no known Sanskrit or Chinese witnesses and exist only in Tibetan. In their
+            Chinese, while both <title xml:lang="en">Advice to King Bimbisāra</title> (Toh 214) and
+            the present text <title xml:lang="en">Advice to King Udayana of Vatsa</title> (Toh 215)
+            have no known Sanskrit or Chinese witnesses and exist only in Tibetan. In their
             colophons, both of these sūtras are attributed to the translators Dānaśīla and Bandé
             Yeshé Dé, who were active during the height of Tibetan imperial patronage of Buddhism in
             the late eighth and early ninth centuries <hi rend="small-caps">ce</hi>. However,
@@ -255,8 +259,8 @@
               catalogs,<note place="end" xml:id="UT22084-062-015-78"> Although a title <title xml:lang="en">Mahāyāna Sūtra “Advice to a King”</title> is found in the Denkarma,
               this refers to the advice to King Prasenajit (Toh 221). This can be ascertained
               because it is listed there as having 160 ślokas. Denkarma, fol. 229.a; Hermann-Pfandt
-              2008, pp. 102–3.</note> nor are they mentioned in Chomden Raldri’s
-            late thirteenth-century survey of translated texts. Adding further to the uncertainty of
+              2008, pp. 102–3.</note> nor are they mentioned in Chomden Raldri’s late
+            thirteenth-century survey of translated texts. Adding further to the uncertainty of
             their provenance, neither text is found in any Kangyurs of the Thempangma recensional
               line.<note place="end" xml:id="UT22084-062-015-79"> As Peter Skilling notes, both
               texts appear “out of nowhere” in the Kangyurs of the Tshalpa line. Skilling 2021, pp.
@@ -289,10 +293,9 @@
               247–93. Burlingame notes (p. 51) that versions of these tales are also told in the
               commentaries on the Aṅguttara and Majjhima Nikāyas, and in the Visuddhimagga.</note>
             He and his two chief wives also feature as the main characters in the frame story of
-              <title xml:lang="en">The Questions of King Udayana of Vatsa</title> (Toh 73),<note place="end" xml:id="UT22084-062-015-207">
+              <title xml:lang="en">King Udayana of Vatsa’s Questions</title> (Toh 73),<note place="end" xml:id="UT22084-062-015-207">
                             <title xml:lang="en">
-                                <ref target="http://read.84000.co/translation/toh73.html">The Questions of King Udayana
-                  of Vatsa</ref>
+                                <ref target="http://read.84000.co/translation/toh73.html">King Udayana of Vatsa’s Questions</ref>
                             </title> (<title xml:lang="Sa-Ltn">Udayana­vatsa­rāja­paripṛcchā</title>, Toh 73).</note> which is included in the
             Heap of Jewels (Ratnakūṭa) collection. Stories about him are also found in the
             Discipline (Vinaya) section of the Tibetan Kangyur,<note place="end" xml:id="UT22084-062-015-189">Particularly in <title xml:lang="en">The Detailed
@@ -315,9 +318,12 @@
             city. Initially, the king is angered by the inauspicious appearance of a mendicant at
             such a time, and he tries to kill the Buddha with an arrow. But the arrow balks, spins
             in the sky, and a voice then rings out with a verse on the dangers of anger, whereupon
-            the king becomes respectful toward the Buddha and a dialogue ensues. Incidentally, other
-            stories about King Udayana also feature him shooting an arrow at someone and it being
-            thwarted.</p>
+            the king becomes respectful toward the Buddha and a dialogue ensues. Other stories about
+            King Udayana, including the sūtra mentioned above, <title xml:lang="en">King Udayana of Vatsa’s Questions</title> (Toh 73), feature him shooting arrows that are thwarted from reaching their intended
+            target.<note place="end" xml:id="UT22084-062-015-1144">See <title xml:lang="en">King Udayana of Vatsa’s Questions</title>, <ptr target="#UT22084-043-010-73"/>-<ptr target="#UT22084-043-010-75"/>, Rotman 2017 p. 262, and <title xml:lang="Sa-Ltn">Vinayavibhaṅgha</title> (Toh 3), Degé Kangyur vol. 8 (‘dul ba, nya), F.188.a.
+              <ref inst="add ptr tag for milestone containing folio 188.a" rend="pending" target="http://read.84000.co/translation/toh3.html"/>
+                        </note>
+                    </p>
           <milestone unit="chunk" xml:id="UT22084-062-015-90"/>
           <p tid="16">After the king pays homage, the Buddha first queries the king’s proclivity for
             warfare, informing him that all his conflicts are futile since they only lead to
@@ -331,8 +337,8 @@
             indeed all phenomena as having no self, after which the king embraces his teaching.</p>
           <milestone unit="chunk" xml:id="UT22084-062-015-91"/>
           <p tid="17">Two prior English translations of the sūtra have been published. An early,
-            loose translation was published in 1973 by Thubten Kalzang Rinpoche et al., and a
-            richly annotated and fine translation by Peter Skilling was published in 2021. This English
+            loose translation was published in 1973 by Thubten Kalzang Rinpoche et al., and a richly
+            annotated and fine translation by Peter Skilling was published in 2021. This English
             translation was made from the Tibetan as found in the Degé Kangyur, in consultation with
             variants recorded in the Comparative Edition (<title xml:lang="Bo-Ltn">dpe bsdur
               ma</title>).</p>
@@ -344,8 +350,7 @@
         <head type="translation"> The Translation </head>
         <head type="titleHon" tid="18">The Mahāyāna Sūtra</head>
         <head type="titleMain" tid="67">Advice to a King (2) </head>
-        <head type="sub" tid="68">Advice to Udayana, King of
-          Vatsa</head>
+        <head type="sub" tid="68">Advice to Udayana, King of Vatsa</head>
         <div type="section" xml:id="UT22084-062-015-section-1">
           <milestone unit="chunk" xml:id="UT22084-062-015-94"/>
           <p tid="23">
@@ -455,13 +460,13 @@
                   <foreign xml:lang="Bo-Ltn" type="term">gang zag</foreign>), which is at times
                 etymologized as the combination of “filling” (Skt. <foreign xml:lang="Sa-Ltn" type="term">pūra</foreign>, Tib. <foreign xml:lang="Bo-Ltn" type="term">gang</foreign>) and “flowing out” (Skt. <foreign xml:lang="Sa-Ltn" type="term">gala</foreign>, Tib. <foreign xml:lang="Bo-Ltn" type="term">zag</foreign>). For
                 an example of this, see entry <ref target="https://www2.hf.uio.no/polyglotta/index.php?page=record&amp;vid=263&amp;mid=487109">no. 340</ref> in the <title xml:lang="Sa-Ltn">Mahāvyutpatti.</title>
-            </note> <ref cRef="F.211.a" type="folio" xml:id="UT22084-062-015-174"/>
+              </note>
+              <ref cRef="F.211.a" type="folio" xml:id="UT22084-062-015-174"/>
                         </l>
           </lg>
           <milestone unit="chunk" xml:id="UT22084-062-015-122"/>
           <lg tid="46">
-            <l>“Beings become
-              attached to this self, </l>
+            <l>“Beings become attached to this self, </l>
             <l>As they take their own bodies to be ‘me’ and ‘I.’</l>
             <l>This ‘self’ fears sickness, death, hunger, and cold.</l>
             <l>It is pleased by praise and upset by reproach.</l>
@@ -585,14 +590,22 @@
         </div>
         <div type="section" xml:id="UT22084-062-015-listBibl-2">
           <head type="section" tid="65">Modern Sources and Translations</head>
-          
-          <bibl xml:id="UT22084-062-015-1141">
-                        <title xml:lang="en">
-                            <ref target="http://read.84000.co/translation/toh214.html">Advice to a King
-            (1)</ref>
-                        </title> (<title xml:lang="Sa-Ltn">Rājadeśa</title>, Toh 214). Translated by Sakya Pandita Translation
-            Group. 84000: Translating the Words of the Buddha, 2024.</bibl>
-        
+          <bibl xml:id="UT22084-062-015-1145">84000. <title xml:lang="en">
+            <ref target="https://read.84000.co/translation/toh214.html">Advice to a King (2)</ref>
+          </title> (<title xml:lang="Sa-Ltn">Rājadeśa</title>, <title xml:lang="Bo-Ltn">rgyal po la gdams pa</title>, Toh 214).
+            Translated by George FitzHerbert and the Sakya Pandita Translation Group. Online publication, 84000: Translating the Words of the Buddha, 2024.</bibl>
+          <bibl xml:id="UT22084-062-015-1146">84000. <title xml:lang="en">
+            <ref target="https://read.84000.co/translation/toh340.html">The Hundred Deeds</ref>
+          </title> (<title xml:lang="Sa-Ltn">Karmaśataka</title>, <title xml:lang="Bo-Ltn">las brgya pa</title>, Toh 340).
+            Translated by Dr. Lozang Jamspal and Kaia Fischer. Online publication, 84000: Translating the Words of the Buddha, 2020.</bibl>
+          <bibl xml:id="UT22084-062-015-1147">84000. <title xml:lang="en">
+            <ref target="https://read.84000.co/translation/toh73.html">King Udayana of Vatsa’s Questions</ref>
+          </title> (<title xml:lang="Sa-Ltn">Udayanavatsa­rājapari­pṛcchā</title>, <title xml:lang="Bo-Ltn">bad sa’i rgyal po ’char byed kyis zhus pa</title>, Toh 73).
+            Translated by Ben Ewing and Lowell Cook. Online publication, 84000: Translating the Words of the Buddha, 2024.</bibl>
+          <bibl xml:id="UT22084-062-015-1148">84000. <title xml:lang="en">
+            <ref target="https://read.84000.co/translation/toh101.html">Upholding the Roots of Virtue</ref>
+          </title> (<title xml:lang="Sa-Ltn">Kuśala­mūla­saṃparigraha</title>, <title xml:lang="Bo-Ltn">dge ba’i rtsa ba yongs su ’dzin pa</title>, Toh 101).
+            Translated by Dharmachakra Translation Committee. Online publication, 84000: Translating the Words of the Buddha, 2020.</bibl>
           <bibl xml:id="UT22084-062-015-141">Adval, Niti. <title xml:lang="en">The Story of King
               Udayana</title>. Chowkhamba Sanskrit Studies, LXXIV. Varanasi: Chowkhamba
             Publications, 1970. </bibl>
@@ -939,13 +952,14 @@
                   things, or as the intrinsic realities of things, or as the intrinsic identities of
                   things, all permanent, unrelated, and unrelative, etc. The nondiscovery of such
                   “selves” within changing, relative, interdependent persons and things is the
-                  realization of ultimate reality, or absence of self.-->
-                  A substantial, self-subsistent entity within beings or 
-                  things, or the intrinsic reality of things, or the intrinsic identity of
-                  things, that is permanent and nonrelative. The Buddha’s teaching, in contrast to
-                  that of other spiritual traditions, holds as a key tenet that the presumed existence of such a 
-                  ‘self’ (in Mahāyāna thought, in things as well as in beings) is habitual but mistaken,
-                  and is the basis of suffering and delusion. Its absence (nonself) can be realized by investigation.</p>
+                  realization of ultimate reality, or absence of self.--> A
+                  substantial, self-subsistent entity within beings or things, or the intrinsic
+                  reality of things, or the intrinsic identity of things, that is permanent and
+                  nonrelative. The Buddha’s teaching, in contrast to that of other spiritual
+                  traditions, holds as a key tenet that the presumed existence of such a ‘self’ (in
+                  Mahāyāna thought, in things as well as in beings) is habitual but mistaken, and is
+                  the basis of suffering and delusion. Its absence (nonself) can be realized by
+                  investigation.</p>
               </note>
             </gloss>
           </item>
