--- a/translations/kangyur/placeholders/075-001_toh343-the_hundred_accounts_of_noble_deeds_beginning_with_that_of_purna.xml
+++ b/translations/kangyur/placeholders/075-001_toh343-the_hundred_accounts_of_noble_deeds_beginning_with_that_of_purna.xml
@@ -4,7 +4,7 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Hundred Accounts of Noble Deeds, Beginning with That of Pūrṇa</title>
+                <title type="mainTitle" xml:lang="en">The Hundred Exemplary Tales, Beginning with That of Pūrṇa</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Pūrṇapramukhāvadānaśataka</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gang po la sogs pa'i rtogs pa brjod pa brgya pa/</title>
                 <title type="otherTitle" xml:lang="zh">《富樓那等一百譬喻經》</title>
@@ -13,7 +13,7 @@
                 <sponsor xml:id="UT22084-075-001-1">Sun Ping, Tian Xingwen and Sun Fanglin</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -54,6 +54,9 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-26T10:30:27.816Z" type="text-version" status="0.0.6" xml:id="UT22084-075-001-10">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#celso" when="2024-05-15T17:29:54.319Z" type="text-version" status="0.0.7" xml:id="UT22084-075-001-11">
+                    <desc>Updated title from "account of noble deeds" to "exemplary tale"</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
