--- a/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
+++ b/translations/kangyur/placeholders/076-012_toh358-the_account_of_the_noble_deeds_of_sardulakarna.xml
@@ -4,7 +4,7 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Account of the Noble Deeds of Śārdūlakarṇa</title>
+                <title type="mainTitle" xml:lang="en">The Exemplary Tale of Śārdūlakarṇa</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Śārdūlakarṇāvadāna</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">stag rna'i rtogs pa brjod pa/</title>
                 <title type="otherTitle" xml:lang="en">The Story of Śārdūlakarṇa</title>
@@ -19,7 +19,7 @@
                 <sponsor xml:id="UT22084-076-012-7">Shin Nomura</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.7 <date>2024</date>
+                <edition>v 0.1.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -82,6 +82,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-04-29T11:38:08.149Z" type="text-version" status="0.1.7" xml:id="UT22084-076-012-28">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#celso" when="2024-05-15T17:32:01.685Z" type="text-version" status="0.1.8" xml:id="UT22084-076-012-29">
+                    <desc>Updated title from "account of noble deeds" to "exemplary tale"</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
