--- a/translations/kangyur/placeholders/079-033_toh406-the_tantra_of_the_protection_by_the_dakinis.xml
+++ b/translations/kangyur/placeholders/079-033_toh406-the_tantra_of_the_protection_by_the_dakinis.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal mkha' 'gro'i ma'i sdom pa'i rgyud kyi rgyal po zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīḍākinīsaṃvaratantrarājanāma</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-079-033"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-079-033-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-16T07:23:27.105Z" type="translation-status" status="3" xml:id="UT22084-079-033-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-16T07:23:27.105Z" type="text-version" status="0.0.1" xml:id="UT22084-079-033-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
