--- a/translations/kangyur/placeholders/091-052_toh655,959-the_incantation_which_removes_hindrances.xml
+++ b/translations/kangyur/placeholders/091-052_toh655,959-the_incantation_which_removes_hindrances.xml
@@ -12,8 +12,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bgegs sel ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavighnavināyakanāmadhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="3"/>
                 <idno xml:id="UT22084-091-052"/>
             </publicationStmt>
             <sourceDesc>
@@ -41,6 +45,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-052-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-16T07:24:47.315Z" type="translation-status" status="3" xml:id="UT22084-091-052-2">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-16T07:24:47.315Z" type="text-version" status="0.0.1" xml:id="UT22084-091-052-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
