--- a/translations/kangyur/translations/075-004_toh346-the_exemplary_tale_of_sumagadha.xml
+++ b/translations/kangyur/translations/075-004_toh346-the_exemplary_tale_of_sumagadha.xml
@@ -30,7 +30,7 @@
                                         Doctor</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -39,7 +39,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="2">
+                                <availability status="1.a">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -55,7 +55,7 @@
                                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2024-01-19</date>
+                                <date>2024-05-16</date>
                         </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh346" type="text">
@@ -157,6 +157,12 @@
                 </change>
                 <change who="#celso" when="2024-05-16T12:10:13.504Z" type="text-version" status="0.0.5" xml:id="UT22084-075-004-390">
                     <desc>changed file name</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-05-16T12:14:23.995Z" type="translation-status" status="1.a" xml:id="UT22084-075-004-391">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-05-16T12:14:23.995Z" type="text-version" status="1.0.0" xml:id="UT22084-075-004-392">
+                    <desc>First published version.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
