--- a/translations/kangyur/translations/075-003_toh345-the_exemplary_tale_about_a_sow.xml
+++ b/translations/kangyur/translations/075-003_toh345-the_exemplary_tale_about_a_sow.xml
@@ -30,7 +30,7 @@
       </titleStmt>
 
       <editionStmt>
-                <edition>v 1.0.16 <date>2024</date>
+                <edition>v 1.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -196,6 +196,9 @@
                 </change>
                 <change who="#celso" when="2024-05-16T12:06:34.778Z" type="text-version" status="1.0.16" xml:id="UT22084-075-003-242">
                     <desc>changed file name</desc>
+                </change>
+                <change who="#celso" when="2024-05-16T17:20:14.079Z" type="text-version" status="1.0.17" xml:id="UT22084-075-003-243">
+                    <desc>change to glossary entry</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1128,13 +1131,13 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified" status="verified">avadāna</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">rtogs pa brjod pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">རྟོགས་པ་བརྗོད་པ།</term>
-                            <note type="definition">
+                            <!--Use Standard<note type="definition">
                                 <p>One of the twelve types of the Buddha’s teaching (<foreign xml:lang="Sa-Ltn" type="term">dvādaśāṅga</foreign>). As such, the Sanskrit word
                   <foreign xml:lang="Sa-Ltn" type="term">avadāna</foreign> means “exceptional feat”
                 or “magnificent deed,” but in the context of the twelve types of <foreign xml:lang="Sa-Ltn" type="term">buddhavacana</foreign> the term came to refer to the
                 narrative accounts of such deeds, as reflected in the Tibetan rendering <foreign xml:lang="Bo-Ltn" type="term">rtogs pa brjod pa</foreign>, “realization account.”
                 In order to be consistent with other <foreign xml:lang="Sa-Ltn" type="term">avadāna</foreign> publications in the 84000 collection we have used the English rendering “exemplary tale.”</p>
-                            </note>
+                            </note>-->
                         </gloss>
                     </item>
           
