--- a/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
+++ b/translations/kangyur/placeholders/071-006_toh292-the_great_sutra_on_the_best_banner.xml
@@ -4,7 +4,7 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Great Sūtra on the Best Banner (1)</title>
+                <title type="mainTitle" xml:lang="en">The Mahāsūtra “The Lofty Banner” (1)</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Dhvajāgramahāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mdo chen po rgyal mtshan mchog</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Dhvajāgranāmamahāsūtra</title>
@@ -13,12 +13,12 @@
                 <author role="translatorEng" xml:id="UT22084-071-006-5">Lowell Cook</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-071-006"/>
             </publicationStmt>
             <sourceDesc>
@@ -46,6 +46,15 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-06T12:57:39.485Z" type="text-version" status="0.0.4" xml:id="UT22084-071-006-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2024-05-15T17:19:57.249Z" type="text-version" status="0.0.5" xml:id="UT22084-071-006-7">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-17T11:27:51.506Z" type="translation-status" status="2.h" xml:id="UT22084-071-006-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-17T11:27:51.506Z" type="text-version" status="0.0.6" xml:id="UT22084-071-006-9">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
