--- a/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
+++ b/translations/kangyur/placeholders/093-019_toh704-the_incantation_the_lions_roar.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-093-019-30">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-093-019"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +90,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-13T13:22:08.332Z" type="text-version" status="0.0.13" xml:id="UT22084-093-019-33">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-17T11:51:46.257Z" type="translation-status" status="2.a" xml:id="UT22084-093-019-34">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-17T11:51:46.257Z" type="text-version" status="0.0.14" xml:id="UT22084-093-019-35">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
