--- a/translations/kangyur/placeholders/100-068_toh912-the_incantation_of_the_promise_made_by_lokesvara_simhanada.xml
+++ b/translations/kangyur/placeholders/100-068_toh912-the_incantation_of_the_promise_made_by_lokesvara_simhanada.xml
@@ -12,11 +12,11 @@
                 <editor role="projectEditor" xml:id="UT22084-100-068-14">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-100-068"/>
                 <date/>
             </publicationStmt>
@@ -70,6 +70,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-13T13:28:29.135Z" type="text-version" status="0.0.9" xml:id="UT22084-100-068-18">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-17T11:57:33.4Z" type="translation-status" status="2.a" xml:id="UT22084-100-068-19">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-17T11:57:33.4Z" type="text-version" status="0.0.10" xml:id="UT22084-100-068-20">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
