--- a/translations/kangyur/translations/054-006_toh125-the_golden_sutra.xml
+++ b/translations/kangyur/translations/054-006_toh125-the_golden_sutra.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-054-006-32">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.9 <date>2024</date>
+                <edition>v 1.1.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -181,6 +181,9 @@
                 </change>
                 <change who="#konchog" when="2024-05-17T19:54:51.914Z" type="text-version" status="1.1.9" xml:id="UT22084-054-006-69">
                     <desc>Three small fixes.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-05-17T19:58:42.611Z" type="text-version" status="1.1.10" xml:id="UT22084-054-006-70">
+                    <desc>User set version to 1.1.10</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
