--- a/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
+++ b/translations/kangyur/placeholders/043-011_toh74-the_sutra_of_the_girl_sumatis_questions.xml
@@ -15,14 +15,15 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-043-011-4">Raktrul Ngawang Kunga Rinpoche (Pema Dorjee)</consultant>
                 <editor role="reviser" xml:id="UT22084-043-011-5">Jason Sanche</editor>
                 <editor role="projectEditor" xml:id="UT22084-043-011-21">George FitzHerbert</editor>
+                <editor role="projectEditor" xml:id="UT22084-043-011-33">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.9 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-043-011"/>
                 <date/>
             </publicationStmt>
@@ -82,6 +83,15 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-01-23T14:21:24.723Z" type="text-version" status="0.0.9" xml:id="UT22084-043-011-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-16T08:36:24.797Z" type="text-version" status="0.0.10" xml:id="UT22084-043-011-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-21T10:02:55.722Z" type="translation-status" status="2.b" xml:id="UT22084-043-011-35">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-21T10:02:55.722Z" type="text-version" status="0.0.11" xml:id="UT22084-043-011-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
