--- a/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
+++ b/translations/kangyur/placeholders/072-019_toh319-the_marvelous_dharma_discourse.xml
@@ -16,13 +16,14 @@
                 <editor role="proofreader" xml:id="UT22084-072-019-5">Daigengna Duoer</editor>
                 <editor role="projectEditor" xml:id="UT22084-072-019-22">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-072-019-34">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-019-47">George FitzHerbert</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-072-019"/>
                 <date/>
             </publicationStmt>
@@ -100,6 +101,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-05-06T13:41:55.082Z" type="text-version" status="0.0.13" xml:id="UT22084-072-019-39">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-15T10:27:34.688Z" type="text-version" status="0.0.14" xml:id="UT22084-072-019-48">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-21T10:12:36.603Z" type="translation-status" status="2.b" xml:id="UT22084-072-019-49">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-21T10:12:36.603Z" type="text-version" status="0.0.15" xml:id="UT22084-072-019-50">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
