--- a/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
+++ b/translations/kangyur/translations/089-012_toh555-the_sutra_of_the_sublime_golden_light.xml
@@ -4,7 +4,7 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="en">The Sūtra of the Sublime Golden Light</title>
+                <title type="mainTitle" xml:lang="en">The Sūtra of the Sublime Golden Light (1)</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Suvarṇa­prabhāsottamasūtra</title>
                 <title type="mainTitle" xml:lang="bo">གསེར་འོད་དམ་པའི་མདོ།</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">gser ’od dam pa’i mdo</title>
@@ -41,7 +41,7 @@
                 <sponsor xml:id="UT22084-089-012-4103">Zhang Dada</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.9 <date>2024</date>
+                <edition>v 1.1.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -256,6 +256,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-05-06T13:46:34.388Z" type="text-version" status="1.1.9" xml:id="UT22084-089-012-4168">
                     <desc>changed svahā to svāhā.</desc>
+                </change>
+                <change who="#celso" when="2024-05-21T17:19:34.545Z" type="text-version" status="1.1.10" xml:id="UT22084-089-012-4169">
+                    <desc>added "(1)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
